--- a/ask/qa/templates/question_detail.html
+++ b/ask/qa/templates/question_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ question.title }}{% endblock %}
+{% block title %}The Q-Files: {{ question.title }}{% endblock %}
 
 {% block content %}
     <h1>{{ question.title }}</h1>
@@ -8,6 +8,7 @@
         Published {{ question.added_at }} by {{ question.author }}
     </p>
     {{ question.text|linebreaks }}
+
     {% block answers %}
         <h2>Answers:</h2>
         {% for answer in answers %}
@@ -20,5 +21,24 @@
             {% empty %}
             <p>There are no answers yet.</p>
         {% endfor %}
+    {% endblock %}
+
+    {% block question_ask %}
+        <h1>Your answer:</h1>
+        {% for e in form.non_field_errors %}
+            <div class="alert">{{ e }}</div>
+        {% endfor %}
+        <div class="form">
+            <form method="post" action="/answer/">
+                {% csrf_token %}
+                {% for field in form %}
+                    <div class="form-field {% if field.errors %}alert{% endif %}">
+                        {{ field }}
+                        {{ field.errors }}
+                    </div>
+                {% endfor %}
+                <button type="submit" class="btn">Add answer</button>
+            </form>
+        </div>
     {% endblock %}
 {% endblock %}
