--- a/ask/qa/templates/signup.html
+++ b/ask/qa/templates/signup.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
-{% block title %}The Q-Files: Ask Question{% endblock %}
+{% block title %}The Q-Files: Sign Up{% endblock %}
 
 {% block content %}
-    <h1>Ask Question</h1>
+    <h1>Sign Up</h1>
     {% for e in form.non_field_errors %}
         <div class="alert">{{ e }}</div>
     {% endfor %}
-     <div class="form">
-         <form method="post" action="/ask/">
-             {% csrf_token %}
-             {% for field in form %}
+    <div class="form">
+        <form method="post" action="/signup/">
+            {% csrf_token %}
+            {% for field in form %}
                  <div class="form-group{% if field.errors %} alert{% endif %}">
                      <div class="form-label">
                          {{ field.label }}
@@ -21,7 +21,7 @@
                      {{ field.errors }}
                  </div>
              {% endfor %}
-             <button type="submit" class="btn">Ask question</button>
-         </form>
-     </div>
+            <button type="submit" class="btn">Sign up!</button>
+        </form>
+    </div>
 {% endblock %}
